# ros2_ws

./: .dockerignore  .gitignore  Dockerfile  README.md  env.txt  tips.txt
docker/: ros_entrypoint.sh
docker/rosdep_src/pb2025_sentry_nav/livox_ros_driver2/: package.xml
docker/rosdep_src/pb2025_sentry_nav/mid360_driver/: package.xml
docker/rosdep_src/rm_behavior_tree/rm_behavior_tree/: package.xml
docker/rosdep_src/rm_serial_driver/: package.xml
scripts/: build_clean_env.sh  build_skip_neupan_fast.sh  build_skip_neupan_slow.sh  complete_build.sh  configure_controller.sh  gen_rosdep_src.sh  mapping.sh  nav_sim.sh  neupan_build.sh  publish_script.sh  quick_build.sh  serial_driver.sh  setup_neupan_env.sh  sim_mapping.sh  simulation_nav.sh  start_navigation.sh
src/neupan_nav2_controller/: requirements.txt
src/neupan_nav2_controller/config/: nav2_params.yaml
src/neupan_nav2_controller/include/neupan_nav2_controller/: neupan_controller.hpp
src/neupan_nav2_controller/model/omni_robot_default/: model_5000_new.pth  model_6000.pth
src/neupan_nav2_controller/src/: neupan_controller.cpp
src/pb2025_robot_description/resource/xmacro/: simulation_robot.sdf.xmacro
src/pb2025_sentry_nav/ign_sim_pointcloud_tool/: package.xml
src/pb2025_sentry_nav/livox_ros_driver2/config/: MID360_config.json
src/pb2025_sentry_nav/livox_ros_driver2/msg/: CustomMsg.msg  CustomPoint.msg
src/pb2025_sentry_nav/mid360_driver/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/mid360_driver/config/: display_point_cloud.rviz  param.yaml
src/pb2025_sentry_nav/mid360_driver/launch/: mid360_driver.launch.py
src/pb2025_sentry_nav/mid360_driver/src/: mid360_driver.cpp  mid360_driver.h  mid360_driver_node.cpp  mid360_driver_node.h
src/pb2025_sentry_nav/pb2025_nav_bringup/: package.xml
src/pb2025_sentry_nav/pb2025_nav_bringup/config/reality/: mid360_user_config.json  nav2_params.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/config/simulation/: nav2_params.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rm_navigation_reality_launch.py  rm_navigation_simulation_launch.py  slam_launch.py
src/pb2025_sentry_nav/pb2025_nav_bringup/map/simulation/: rmul_2026.pgm  rmul_2026.yaml
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/include/pb_omni_pid_pursuit_controller/: omni_pid_pursuit_controller.hpp
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp
src/pb2025_sentry_nav/point_lio/: CMakeLists.txt
src/pb2025_sentry_nav/point_lio/config/: mid360.yaml  velody16.yaml
src/pb2025_sentry_nav/point_lio/src/: laserMapping.cpp  parameters.cpp  parameters.h
src/pb2025_sentry_nav/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/rm_behavior_tree/rm_behavior_tree/: CMakeLists.txt  package.xml  rmuc_01.xml
src/rm_behavior_tree/rm_behavior_tree/config/: 3v3_new.xml  7.xml  7v7.xml  HighHP_combat_logic.xml  IsDeadAndDispelDebuff.xml  IsDetectEnemy.xml  LowHP_combat_logic.xml  MediumHP_combat_logic.xml  Project1.btproj  attack_left.xml  attack_right.xml  decision_switch_test.xml  minimal_detect_respawn.xml  perception_and_blackboard.xml  protect_supply.xml  retreat_attack_left.xml  rmuc_01.xml  tesk.xml
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/action/: cancel_nav_goal.hpp  clear_recovery_flag.hpp  detect_respawn_and_set_recovery.hpp  get_current_location.hpp  init_blackboard_config.hpp  init_search_timer_if_needed.hpp  keep_running.hpp  micro_search_supply_card.hpp  send_goal.hpp  sentry_follower.hpp  set_nav_goal_from_config.hpp  sub_rfid_status.hpp  sub_robot_position.hpp  sub_robot_status.hpp  wait_and_heal.hpp
src/rm_behavior_tree/rm_behavior_tree/include/rm_behavior_tree/plugins/condition/: is_attacked.hpp  is_dead.hpp  is_hp_above.hpp  is_hp_below.hpp  is_recovery_needed.hpp  is_status_ok.hpp  is_supply_card_detected.hpp  is_within_scope.hpp  navigate_to_goal.hpp  not_arrived.hpp
src/rm_behavior_tree/rm_behavior_tree/launch/: rm_behavior_tree.launch.py
src/rm_behavior_tree/rm_behavior_tree/plugins/action/: cancel_nav_goal.cpp  clear_recovery_flag.cpp  detect_respawn_and_set_recovery.cpp  get_current_location.cpp  init_blackboard_config.cpp  init_search_timer_if_needed.cpp  keep_running.cpp  micro_search_supply_card.cpp  move_around.cpp  send_goal.cpp  sentry_follower.cpp  set_nav_goal_from_config.cpp  sub_rfid_status.cpp  sub_robot_position.cpp  sub_robot_status.cpp  wait_and_heal.cpp
src/rm_behavior_tree/rm_behavior_tree/plugins/condition/: .is_status_ok.cpp.swp  is_attacked.cpp  is_dead.cpp  is_hp_above.cpp  is_hp_below.cpp  is_outpost_ok.cpp  is_recovery_needed.cpp  is_status_ok.cpp  is_status_ok.cpp.bak  is_supply_card_detected.cpp  is_within_scope.cpp  navigate_to_goal.cpp  not_arrived.cpp
src/rm_behavior_tree/rm_behavior_tree/src/: rm_behavior_tree.cpp  rm_behavior_tree_minimal.cpp
src/rm_behavior_tree/rm_decision_interfaces/: CMakeLists.txt  publish_script.sh
src/rm_behavior_tree/rm_decision_interfaces/msg/: NavControlCmd.msg  RFID.msg  RobotPosition.msg  RobotStatus.msg
src/rm_behavior_tree/scripts/: run_minimal_test.sh
src/rm_bt_test_publishers/: CMakeLists.txt  package.xml
src/rm_bt_test_publishers/src/: detect_respawn_checker.cpp  robot_status_publisher.cpp
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rmoss_core/rmoss_cam/: CMakeLists.txt
src/rmoss_gazebo/rmoss_gz_plugins/: CMakeLists.txt
src/rmu_gazebo_simulator/rmu_gazebo_simulator/config/: gz_world.yaml
src/small_point_lio/: CMakeLists.txt
src/small_point_lio/config/: mid360.yaml  unilidar_l2.yaml
src/small_point_lio/launch/: small_point_lio.launch.py
src/small_point_lio/src/: small_point_lio_node.cpp  small_point_lio_node.hpp
src/small_point_lio/src/lidar_adapter/: unitree_lidar.h
src/small_point_lio/src/small_point_lio/: parameters.h  preprocess.cpp  small_point_lio.cpp
