<?xml version="1.0"?>
<package format="3">
  <name>rm_bt_test_publishers</name>
  <version>0.0.0</version>
  <description>Test publishers for rm_behavior_tree verification</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rm_decision_interfaces</depend>

  <export>
  </export>
</package>
